2005-10-07  Federico Mena Quintero  <federico@ximian.com>

	Fixes bug #317999:

	* tests/autotestfilechooser.c (test_reload_sequence): Ensure that
	the the result of gtk_file_chooser_get_folder() is NULL or
	non-NULL at the right times.  Log the tests.
	(test_button_folder_states): New test for the initial states of
	the current folder in GtkFileChooserButton.
	(main): Test that the number of warnings/errors/critical errors is
	zero.

	* gtk/gtkfilechooser.c (gtk_file_chooser_get_current_folder):
	Clarify the documentation on when this can return NULL.
	(gtk_file_chooser_get_current_folder_uri): Likewise.

	* gtk/gtkfilechooserbutton.c (struct
	_GtkFileChooserButtonPrivate): Added a folder_has_been_set flag;
	we use it to keep track of whether a folder has been set.
	(gtk_file_chooser_button_map):  Implement.  If no folder has been
	loaded before, we at least try to load $cwd here.
	(gtk_file_chooser_button_constructor): If the construct-time
	dialog already has a folder set, turn on our folder_has_been_set
	flag.
	(dialog_current_folder_changed_cb): Turn on our
	folder_has_been_set flag.

2005-10-07  Michael Natterer  <mitch@gimp.org>

	* gtk/gtkfilechooserdefault.c: remove some explicit #defines of
	PROFILE_FILE_CHOOSER because they break compilation after the
	removal of <unistd.h>.

2005-10-07   Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c: Properly fix the unistd.h include
	by moving it out of the profiling ifdef.

	* gtk/gtkfilechooserdefault.c: Remove a redundant (and
	unconditional) include of unistd.h  (#318211, Kazuki Iwamoto)

	* gtk/gtktexttag.c (gtk_text_attributes_ref): Use
	g_return_val_if_fail(), not g_return_if_fail().  (#318412,
	Kazuki Iwamoto)

2005-10-06  Matthias Clasen  <mclasen@redhat.com> 
		
	* gtk/gtk.symbols:
	* gtk/gtktextbuffer.h:
	* gtk/gtktextbuffer.c: Add a readonly has-selection property
	with a getter.  (#318161, Paolo Borelli)

2005-10-05  Matthias Clasen  <mclasen@redhat.com>
